--- a/src/main/resources/templates/image.html
+++ b/src/main/resources/templates/image.html
@@ -5,6 +5,6 @@
     <title>image</title>
 </head>
 <body>
-<img style="height: 200px;width: 350px" src="http://localhost/download/eb78264460961c4786476f768fd45b52.bmp" alt="null">
+<img style="height: 200px;width: 350px" src="http://wule.space/download/b781adc9d42763e77341f38e55015913.jpg" alt="null">
 </body>
 </html>
