--- a/src/main/resources/templates/LostFound.html
+++ b/src/main/resources/templates/LostFound.html
@@ -17,13 +17,13 @@
   <label for="title">物品名字：</label>
   <input type="text" id="title" name="thingName" required><br>
   <input type="text" hidden="hidden" id="userId" name="userId" value="">
-  <label for="phoneNumber">电话：</label>
+  <label for="phoneNumber">联系电话：</label>
   <input type="text" id="phoneNumber" name="phoneNumber" required><br>
-  <label for="description">描述:</label>
-  <textarea id="description" name="thingDescribe" required></textarea><br>
+  <label for="description">物品描述:</label>
+  <textarea id="description" name="thingDescribe" style="margin-top: 10px" required></textarea><br><br>
   <label for="image">图片:</label>
-  <input type="file" id="image" name="file" accept="image/*" required><br>
-  <input type="submit" value="发布">
+  <input type="file" id="image" name="file" accept="image/*"  required><br><br>
+  <input type="submit" value="发布失物招领 " style="width: 150px;height: 30px">
 </form>
 </div>
 <div id="lostFounds" style="text-align: center">
