--- a/src/main/resources/templates/FileShare.html
+++ b/src/main/resources/templates/FileShare.html
@@ -15,7 +15,7 @@
 
   <form id="postForm">
     <h2>发布资源</h2>
-    <input type="text" hidden="hidden" id="sharerId" name="sharerId" value="">
+    <input type="text" hidden="hidden" id="sharerId" name="sharerId" value="123456">
     <label for="notices">资源描述:</label>
     <textarea id="notices" name="notices" style="margin-top: 10px" required></textarea><br><br>
     <label for="file">文件:</label>
