--- a/src/main/resources/templates/schoolemploy.html
+++ b/src/main/resources/templates/schoolemploy.html
@@ -63,7 +63,7 @@
              <label for="image">图片:</label>
              <input type="file" id="image" name="file" accept="image/*" required><br><br>
 
-             <input type="submit" value="发布失物招领 " style="width: 150px;height: 30px">
+             <input type="submit" value="发布招聘" style="width: 150px;height: 30px">
          </form>
      </div>
 
