--- a/src/main/resources/templates/transaction.html
+++ b/src/main/resources/templates/transaction.html
@@ -47,13 +47,13 @@
       <label for="goodsPrice">价格:</label>
       <input type="text" id="goodsPrice" name="goodsPrice" style="margin-top: 10px" required>
 
-      <label for="goodsDescribe">要求:</label>
+      <label for="goodsDescribe">描述:</label>
       <textarea id="goodsDescribe" name="goodsDescribe" style="margin-top: 10px" required></textarea><br>
 
       <label for="image">图片:</label>
       <input type="file" id="image" name="file" accept="image/*" required><br><br>
 
-      <input type="submit" value="发布失物招领 " style="width: 150px;height: 30px">
+      <input type="submit" value="发布二手货" style="width: 150px;height: 30px">
     </form>
   </div>
 
