--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>signin</title>
-
-
     <style>
         * {
             margin: 0;
@@ -85,7 +83,8 @@
 <input type="submit" id="register" value="注册" onclick="window.location.href='register.html'">
 </p>
 
-<script src="/js/jquery.js"></script>
+<script src="/static/js/jQuery-3.7.0.js"></script>
+<script src="/js/jQuery-3.7.0.js"></script>
 <script>
 
     function check()
@@ -105,7 +104,7 @@
     }
 
     function send(){
-        const URL = "http://wule.space:80/signin/user";
+        const URL = "http://localhost/signin/user";
         const uid = document.getElementById("uid").value;
         const upwd = document.getElementById("upwd").value;
 
