--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
         .title{
             font-size: 30px;
             font-weight: bold;
-            margin-left: 130px;
+            margin-left: 70px;
         }
         .title:hover{
             color: #0d6efd;
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div class="container my-5">
-    <p style="text-align: center;font-size: 50px">校园综合服务平台</p>
+    <p style="text-align: center;font-size: 50px">校园服务平台</p>
 </div>
 
 <nav class="navbar-expand-lg navbar-light bg-light">
@@ -54,8 +54,5 @@
       </div>
   </div>
 </nav>
-
-<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
-<script src="/js/index.js"></script>
 </body>
 </html>
